WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
92352
Regression:
r123696
made css3/flexbox tests failing
https://bugs.webkit.org/show_bug.cgi?id=92352
Summary
Regression: r123696 made css3/flexbox tests failing
Kristóf Kosztyó
Reported
2012-07-26 02:02:56 PDT
After
r123696
two tests start to fail on all platform except Chromium. css3/flexbox/flex-algorithm-min-max.html css3/flexbox/flex-rounding.html
Attachments
css3/flexbox/flex-algorithm-min-max.html diff
(711 bytes, text/plain)
2012-07-26 02:04 PDT
,
Kristóf Kosztyó
no flags
Details
css3/flexbox/flex-rounding.html diff
(2.94 KB, text/plain)
2012-07-26 02:04 PDT
,
Kristóf Kosztyó
no flags
Details
Patch
(5.74 KB, patch)
2012-07-26 11:06 PDT
,
Tony Chang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kristóf Kosztyó
Comment 1
2012-07-26 02:04:07 PDT
Created
attachment 154583
[details]
css3/flexbox/flex-algorithm-min-max.html diff
Kristóf Kosztyó
Comment 2
2012-07-26 02:04:37 PDT
Created
attachment 154584
[details]
css3/flexbox/flex-rounding.html diff
Kristóf Kosztyó
Comment 3
2012-07-26 02:12:04 PDT
On Qt the css3/flexbox/cross-axis-scrollbar.html starts to fail also. I skipped them in
r123717
<
http://trac.webkit.org/changeset/123717
> to paint the bot greener. Please unskip them after the proper fix.
Tony Chang
Comment 4
2012-07-26 10:40:07 PDT
Sorry! Will fix.
Tony Chang
Comment 5
2012-07-26 11:06:54 PDT
Created
attachment 154689
[details]
Patch
Tony Chang
Comment 6
2012-07-26 11:07:27 PDT
Levi, can you review? I wasn't sure if I should check in failing results for css3/flexbox/flex-rounding.html for the other ports.
Levi Weintraub
Comment 7
2012-07-26 11:51:15 PDT
Comment on
attachment 154689
[details]
Patch Apologies for missing this before.
WebKit Review Bot
Comment 8
2012-07-26 12:56:49 PDT
Comment on
attachment 154689
[details]
Patch Clearing flags on attachment: 154689 Committed
r123783
: <
http://trac.webkit.org/changeset/123783
>
WebKit Review Bot
Comment 9
2012-07-26 12:56:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug