Regression: r123696 made css3/flexbox tests failing https://bugs.webkit.org/show_bug.cgi?id=92352

Reviewed by Levi Weintraub.

Source/WebCore:

Use roundedLayoutUnit so ports without subpixel layout still pass existing tests.

Covered by css3/flexbox/flex-algorithm-min-max.html which should pass again.

* rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::resolveFlexibleLengths):

LayoutTests:

Skip css3/flexbox/flex-rounding.html on ports that don't enable subpixel layout.

* platform/efl/TestExpectations:
* platform/gtk/TestExpectations:
* platform/mac/Skipped:
* platform/qt/Skipped:


Canonical link: https://commits.webkit.org/110219@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123783 268f45cc-cd09-0410-ab3c-d52691b4dbfc